# mcp-apache-spark-history-server

./: .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SUPPORT.md  TESTING.md  Taskfile.yml  app.py  config.py  config.yaml  main.py  main_stdio.py  pyproject.toml  spark_client.py  spark_history_server_mcp_launcher.sh  spark_html_client.py  spark_types.py  start_local_spark_history.sh  test_spark_client.py  test_tools.py  tools.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature.yaml
.github/workflows/: build.yaml  ci.yml  release.yaml
deploy/kubernetes/helm/: README.md
deploy/kubernetes/helm/mcp-apache-spark-history-server/: Chart.yaml  values.yaml
deploy/kubernetes/helm/mcp-apache-spark-history-server/templates/: _helpers.tpl  deployment.yaml
deploy/kubernetes/helm/mcp-apache-spark-history-server/tests/: service_test.yaml
deploy/kubernetes/helm/spark-history-mcp/: Chart.yaml  values.yaml
deploy/kubernetes/helm/spark-history-mcp/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
deploy/kubernetes/helm/spark-history-mcp/tests/: service_test.yaml
examples/aws/emr/: README.md
examples/aws/glue/: README.md
examples/basic/: README.md  history-server.conf
examples/integrations/: README.md  langgraph.md  llamaindex.md
examples/integrations/amazon-q-cli/: README.md  amazon-q-shs-mcp-config.json
examples/integrations/claude-desktop/: README.md  claude-desktop-shs-mcp-config.json
examples/integrations/kiro/: README.md
examples/integrations/langgraph/: README.md  requirements.txt  spark_agent.py
examples/integrations/strands-agents/: README.md  requirements.txt  spark_agent.py
pre-commit-scripts/: check-config-security.py
screenshots/: README.md
src/spark_history_mcp/: __init__.py
src/spark_history_mcp/api/: __init__.py  emr_persistent_ui_client.py  spark_client.py  spark_html_client.py
src/spark_history_mcp/config/: __init__.py  config.py
src/spark_history_mcp/core/: __init__.py  app.py  main.py
src/spark_history_mcp/models/: __init__.py  spark_types.py
src/spark_history_mcp/tools/: __init__.py  tools.py
src/spark_history_mcp/utils/: __init__.py
taskfiles/: kind.yaml
tests/: __init__.py  e2e.py
tests/emr/: __init__.py  test_emr_basic.py  test_emr_integration.py  test_emr_persistent_ui_client.py
tests/helm-values/: local-shs.yaml  local.yaml
tests/manifests/: example-event-volume.yaml  mcp-inspector.yaml
tests/unit/: __init__.py  config.py  test_spark_client.py  test_tools.py
